test/compile_errors/err_bare_null_requires_context.w
//! expect-check-fail: null requires pointer type context

fn main:
    let p = null
